修复一些bug，对功能进行一些改动

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,8 @@ layout: default
         <a href="{{ page.androidaddr }}">Android下载 </a><br/>
         {% endif %}
         <p>稳定评分：{{ page.score }}</p>
-        </h4>
+        </h4><br/>
+        <p>有任何bug都可以在评论区告诉我们哦</p>
     </span>
     
     {% include post-pagination.html %}
